# FastFlowLM

./: .gitignore  .gitmodules  Dockerfile  LICENSE_BINARY.txt  README.md  bench_config.json
src/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  model_list.json
src/common/: utils.cpp
src/common/AutoEmbeddingModel/: auto_embedding_model.cpp  modeling_gemma_embedding.cpp
src/common/AutoModel/: automodel.cpp  modeling_gemma3.cpp  modeling_gemma3_image.cpp  modeling_gemma3_text.cpp  modeling_gpt_oss.cpp  modeling_lfm2.cpp  modeling_llama3.cpp  modeling_phi4.cpp  modeling_qwen2.cpp  modeling_qwen2vl.cpp  modeling_qwen2vl_image.cpp  modeling_qwen3.cpp  modeling_qwen3vl.cpp  modeling_qwen3vl_image.cpp
src/common/image/: image_reader.cpp
src/common/modules/: sampler.cpp
src/common/npu_utils/: npu_instr_utils.cpp
src/common/tokenizer/: tokenizer.cpp
src/common/whisper/: modeling_whisper.cpp  modeling_whisper_audio.cpp
src/include/: buffer.hpp  causal_lm.hpp  harmony_filter.hpp  lm_config.hpp  metrices.hpp  model_list.hpp  program_args.hpp  prompt_cache.hpp  tensor_2d.hpp  typedef.hpp  update.hpp  wstream_buf.hpp
src/include/AutoEmbeddingModel/: all_embedding_model.hpp  auto_embedding_model.hpp  modeling_gemma_embedding.hpp
src/include/AutoModel/: all_models.hpp  automodel.hpp  modeling_gemma3.hpp  modeling_gemma3_text.hpp  modeling_gpt_oss.hpp  modeling_lfm2.hpp  modeling_llama3.hpp  modeling_phi4.hpp  modeling_qwen2.hpp  modeling_qwen2vl.hpp  modeling_qwen3.hpp  modeling_qwen3vl.hpp
src/include/aiebu/: aiebu.h  aiebu_assembler.h  aiebu_error.h
src/include/gemma/: gemma_npu.hpp  gemma_npu_sequence.hpp
src/include/gemma_embedding/: gemma_embedding.hpp
src/include/gemma_text/: gemma_text_dequant.hpp  gemma_text_gemm.hpp  gemma_text_lm_head.hpp  gemma_text_npu.hpp  gemma_text_npu_sequence.hpp
src/include/gpt_oss/: gpt_oss_npu.hpp  gpt_oss_npu_sequence.hpp
src/include/image/: image_reader.hpp
src/include/llama/: llama_npu.hpp  llama_npu_sequence.hpp
src/include/models/gemma/: gemma_npu.hpp  gemma_npu_sequence.hpp
src/include/models/gemma_embedding/: gemma_embedding.hpp
src/include/models/gemma_text/: gemma_text_dequant.hpp  gemma_text_gemm.hpp  gemma_text_lm_head.hpp  gemma_text_npu.hpp
src/include/models/gpt_oss/: gpt_oss_npu.hpp
src/include/models/lfm2/: lfm2_npu.hpp
src/include/models/llama/: llama_npu.hpp  llama_npu_sequence.hpp
src/include/models/phi4/: phi4_npu.hpp
src/include/models/qwen/: qwen_npu.hpp  qwen_npu_sequence.hpp
src/include/models/qwen2/: qwen2_npu.hpp
src/include/models/qwen2vl/: qwen2vl_npu.hpp
src/include/models/qwen3/: qwen3_npu.hpp  qwen3_npu_sequence.hpp
src/include/models/qwen3vl/: qwen3vl_npu.hpp
src/include/modules/: dequant.hpp  embedding.hpp  gemm.hpp  lm_head.hpp  sampler.hpp
src/include/npu_utils/: npu_instr_utils.hpp  npu_utils.hpp
src/include/npu_utils/instr_utils/: npu_cmd.hpp  npu_cmd_ddr.hpp  npu_cmd_issue_token.hpp  npu_cmd_maskwrite.hpp  npu_cmd_preemption.hpp  npu_cmd_wait.hpp  (+2 more)
src/include/phi4/: phi4_npu.hpp  phi4_npu_sequence.hpp
src/include/qwen/: qwen_npu.hpp  qwen_npu_sequence.hpp
src/include/tensor_utils/: q4_npu_eXpress.hpp  safe_tensors.hpp
src/include/tokenizer/: tokenizer.hpp
src/include/utils/: debug_utils.hpp  profiler.hpp  utils.hpp  vm_args.hpp
src/include/whisper/: language_table.hpp  modeling_whisper.hpp  whisper_npu.hpp
src/inno/: flm.iss
src/lib/: dequant.lib  gemm.lib  gemma_embedding.lib  gemma_npu.lib  gemma_text_npu.lib  gpt_oss_npu.lib  lfm2_npu.lib  llama_npu.lib  lm_head.lib  mha.lib  npu_utils.lib  phi4_npu.lib  qwen2_npu.lib  qwen2vl_npu.lib  qwen3_npu.lib  qwen3vl_npu.lib  qwen_npu.lib  whisper_npu.lib
src/pull/: download_model.cpp  download_model.hpp  model_downloader.cpp  model_downloader.hpp
src/runner/: cli_wide.cpp  cli_wide.hpp  cli_wide_posix.cpp  runner.cpp  runner.hpp
src/server/: multipart.cpp  multipart.hpp  rest_handler.cpp  rest_handler.hpp  server.cpp  server.hpp  streaming_ostream.hpp  streaming_ostream_openai.hpp
src/src/: benchmarking.hpp  main.cpp
src/tb_files/: 16k.txt  1k.txt  2k.txt  32k.txt  4k.txt  64k.txt  8k.txt  jpg_base64.txt  output_image_test1.ppm  output_image_test2.ppm  output_image_test3.ppm  output_image_test4.ppm  png_base64.txt  prompt.txt  resized_image.ppm  test.txt  test_line.txt  test_src.txt
src/test/: CMakeLists.txt  common.mk
src/test/gemma_embedding/: CMakeLists.txt  Makefile  test.cpp
src/test/gemma_npu/: CMakeLists.txt  Makefile  test.cpp
src/test/gemma_text_npu/: CMakeLists.txt  Makefile  test.cpp
src/test/gpt_oss_npu/: CMakeLists.txt  Makefile  test.cpp  test.sh
src/test/lfm2_npu/: CMakeLists.txt  Makefile  test.cpp
src/test/llama_npu/: CMakeLists.txt  Makefile  test.cpp  test.sh
src/test/phi4_npu/: CMakeLists.txt  Makefile  test.cpp
src/test/qwen2_npu/: CMakeLists.txt  Makefile  test.cpp
src/test/qwen2vl_npu/: CMakeLists.txt  Makefile  test.cpp
src/test/qwen3_npu/: CMakeLists.txt  Makefile  test.sh
src/test/qwen3vl_npu/: CMakeLists.txt  Makefile  test.cpp
src/test/qwen_npu/: CMakeLists.txt  Makefile  test.cpp
src/test/whisper_npu/: CMakeLists.txt  Makefile  test.cpp
src/xclbins/GPT-OSS-20B-NPU2/: dequant.xclbin  short_seq_mm.xclbin
src/xclbins/GPT-OSS-Safeguard-20b-NPU2/: attn.xclbin  mm.xclbin
src/xclbins/Gemma3-270M-NPU2/: attn.xclbin
src/xclbins/Gemma3-4B-NPU2/: vision_attn.xclbin
src/xclbins/LFM2.5-1.2B-Thinking-NPU2/: attn.xclbin
src/xclbins/Llama-3.2-1B-NPU2/: dequant.xclbin  mm.xclbin  mm_old.xclbin
src/xclbins/Medgemma-1.5-4B-NPU2/: dequant.xclbin  layer.xclbin  vision_mm.xclbin
src/xclbins/Phi4-mini-Instruct-NPU2/: attn.xclbin
src/xclbins/Qwen2.5-3B-Instruct-NPU2/: attn.xclbin  dequant.xclbin  layer.xclbin
src/xclbins/Qwen2.5-VL-3B-Instruct-NPU2/: dequant.xclbin  layer.xclbin
src/xclbins/Qwen3-0.6B-NPU2/: attn.xclbin
src/xclbins/Qwen3-VL-4B-Instruct-NPU2/: attn.xclbin
src/xclbins/Translategemma-4B-Instruct-NPU2/: attn.xclbin  dequant.xclbin  lm_head.xclbin
src/xclbins/Whisper-V3-Turbo-NPU2/: encoder_attn.xclbin
(+78 files in other folders)
